@@ -190,14 +190,12 @@ BOOT_CODE static bool_t init_cpu(void)
     /* Setup kernel stack pointer.
      * On ARM SMP, the array index here is the CPU ID
      */
-#ifndef CONFIG_ARCH_ARM_V6
     word_t stack_top = ((word_t) kernel_stack_alloc[CURRENT_CPU_INDEX()]) + BIT(CONFIG_KERNEL_STACK_BITS);
 #if defined(ENABLE_SMP_SUPPORT) && defined(CONFIG_ARCH_AARCH64)
     /* the least 12 bits are used to store logical core ID */
     stack_top |= getCurrentCPUIndex();
 #endif
     setKernelStack(stack_top);
-#endif /* CONFIG_ARCH_ARM_V6 */
 
 #ifdef CONFIG_ARCH_AARCH64
     /* initialise CPU's exception vector table */
