@@ -32,6 +32,8 @@ Upcoming release: BINARY COMPATIBLE
  * Rename libsel4 config option AARCH64_VSPACE_S2_START_L1 to CONFIG_AARCH64_VSPACE_S2_START_L1 to be namespace
    compliant.
 * Remove imx31/kzm platform support. This platform is being removed as it is sufficiently old and unused.
+* Remove ARM1136JF_S and ARMv6 support. This architecture version is being removed as it is sufficiently old and
+  unused. See https://sel4.atlassian.net/browse/RFC-8.
 
 ## Upgrade Notes
 ---
